--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,8 +1,19 @@
-FROM node:20-alpine
+FROM node:20-alpine AS deps
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm ci
+
+FROM deps AS build
+WORKDIR /app
 COPY . .
+RUN npm run build
+
+FROM node:20-alpine AS runtime
+WORKDIR /app
 ENV NODE_ENV=production
+COPY package*.json ./
+RUN npm ci --omit=dev
+COPY --from=build /app/dist ./dist
+
 EXPOSE 3001
-CMD ["node", "index.js"]   # or "dist/index.js" if you build TS
+CMD ["node","dist/index.js"]
