--- a/client/package.json
+++ b/client/package.json
@@ -14,19 +14,27 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@tensorflow/tfjs": "^4.11.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@upscalerjs/esrgan-medium": "^1.0.0-beta.13",
+    "@upscalerjs/esrgan-slim": "^1.0.0-beta.12",
     "axios": "^1.11.0",
     "express": "^5.1.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.5",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
+    "jszip": "^3.10.1",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "upscaler": "^1.0.0-beta.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@hello-pangea/dnd": "^18.0.1",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
