--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "upscaler": "^1.0.0-beta.19"
+    "upscaler": "^1.0.0-beta.19",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
