--- a/client/package.json
+++ b/client/package.json
@@ -13,17 +13,17 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
-    "@tailwindcss/vite": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.12",
     "@tensorflow/tfjs": "^4.11.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "axios": "^1.11.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
-    "flowbite": "^3.1.2",
-    "flowbite-react": "^0.12.5",
+    "flowbite-react": "^0.12.7",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.541.0",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -32,18 +32,18 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@hello-pangea/dnd": "^18.0.1",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
