Adding the ability to bypass Scryfall.com API queries via a local JSON export from their bulk data API

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\""
+    "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
+    "dev:local": "concurrently \"npm run dev --prefix client\" \"npm run dev:local --prefix server\""
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
