--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
+    "dev:local": "USE_LOCAL_DB=true nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "start:local": "USE_LOCAL_DB=true node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +22,8 @@
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stream-json": "^1.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
