--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.541.0",
     "node-fetch": "^3.3.2",
+    "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "zustand": "^5.0.8"
